--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "react-scripts": "^5.0.1"
+    "express-handlebars": "^8.0.3",
+    "multer": "^1.4.5-lts.2",
+    "react-scripts": "^5.0.1",
+    "socket.io": "^4.8.1"
   },
   "description": ""
 }
