--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "express-session": "^1.18.1",
+    "mongoose": "^8.15.1",
+    "mongoose-paginate-v2": "^1.9.1",
     "multer": "^1.4.5-lts.2",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.8.1"
